# lab1_actions

./: CMakeLists.txt  README.md
.github/workflows/: release.yml
resources/: Info.plist
